--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "real-state-platform-server-side",
+  "name": "real-state-server-side",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
+    "stripe": "^14.5.0"
   }
 }
